--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a,
+button,
+select {
+	outline: none;
+}
+
+a:focus,
+button:focus,
+select:focus {
+	outline: 2px solid #3b82f6;
+}
